; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_vt.c_blank_screen_t.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_vt.c_blank_screen_t.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@console_timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@blankinterval = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@blank_timer_expired = common dso_local global i32 0, align 4
@console_work = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @blank_screen_t to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blank_screen_t(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = call i32 (...) @keventd_up()
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i64 @unlikely(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load i64, i64* @jiffies, align 8
  %11 = load i32, i32* @blankinterval, align 4
  %12 = load i32, i32* @HZ, align 4
  %13 = mul nsw i32 %11, %12
  %14 = sext i32 %13 to i64
  %15 = add nsw i64 %10, %14
  %16 = call i32 @mod_timer(i32* @console_timer, i64 %15)
  br label %19

17:                                               ; preds = %1
  store i32 1, i32* @blank_timer_expired, align 4
  %18 = call i32 @schedule_work(i32* @console_work)
  br label %19

19:                                               ; preds = %17, %9
  ret void
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @keventd_up(...) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
